# mp3asm

./: AUTHORS  ChangeLog  Changelog  INSTALL  Makefile  NEWS  README  TODO  configure.in  frameinfo.c  frameinfo.h  getlopt.c  getlopt.h  gettypes.c  mp3asm.c  utils.c  utils.h
src/: Makefile  Makefile.am  block.c  block.h  commandline.c  commandline.h  fe.c  fe.h  frame.c  frame.h  input.c  input.h  logging.c  logging.h  menu.c  menu.h  mp3asm.c  mp3asm.h  mp3gui.c  mp3gui.h  output.c  output.h  parse.c  parse.h  prelim_doc.txt  size_calc.c  stream.c  stream.h  table.txt  tag.c  tools.c  tools.h  utils.c  utils.h
