dnl Process this file with autoconf to produce a configure script.

AC_INIT(src)
AM_INIT_AUTOMAKE(mp3asm, 0.2.0)
AC_PROG_CC

AC_PATH_PROG(unamepath, uname)

AC_MSG_CHECKING(system type)
system=`$unamepath -s`
AC_MSG_RESULT($system)
if test "$system" != "Linux"; then
  echo This program was only tested on x86 linux!
fi

AC_PATH_PROG(glibpath, glib12-config)
if test "_$glibpath" = _ ; then
  AC_PATH_PROG(glibpath, glib-config)
fi
if test "_$glibpath" = _ ; then
  AC_MSG_ERROR("Cannot find glib!!!")
else
  AC_MSG_CHECKING(for Glib compile flags)
  GLIB_CFLAGS=`$glibpath --cflags`
  GLIB_LIBS=`$glibpath gmodule --libs`
  CFLAGS="$CFLAGS $GLIB_CFLAGS"
  LIBS="$LIBS $GLIB_LIBS"
  AC_MSG_RESULT(ok)
  if test "$prefix" = "NONE"; then
    AC_MSG_CHECKING(glib-config for prefix)
    prefix=`$glibpath --prefix`
    AC_MSG_RESULT($prefix)
  fi
  AC_DEFINE_UNQUOTED(PREFIX, "$prefix")
fi

AM_PATH_GTK(1.2.0, , gtk=no)
if test "$gtk" = no; then
  AC_MSG_ERROR("Cannot find GTK+!!!")
else
  LIBS="$LIBS $GTK_LIBS"
  CFLAGS="$CFLAGS $GTK_CFLAGS" 
fi

dnl Checks for programs.
dnl AC_PROG_LN_S

CFLAGS="-g -O -Wall $CFLAGS"

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
 
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT([
Makefile
src/Makefile
])
